--- a/src/css/search-result.css
+++ b/src/css/search-result.css
@@ -1,6 +1,9 @@
 .search-result-text-container{
     height: 5%;
 }
+.result-display-container{
+    height: 100%;
+}
 .result-display-container:before {
     content: ' ';
     display: inline-block;
@@ -10,13 +13,14 @@
 .search-display-text{
     font-size: 15px;
     font-weight: bold;
-    margin-bottom: 25px;
     display: inline-block;
+    vertical-align: middle;
 }
 .sort-container{
     display: inline-block;
     margin-left: 10px;
     font-size: 15px;
+    vertical-align: middle;
 }
 .sort-container:before {
     content: ' ';
